# SimRender

./: .buildinfo  .gitignore  README.md  about.html  api.html  genindex.html  index.html  install.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  setup_dev.py  usage.html
.doctrees/: about.doctree  api.doctree  environment.pickle  index.doctree  install.doctree  usage.doctree
.github/workflow/: documentation.yml
.github/workflows/: documentation.yml
_modules/: index.html
_sources/: about.rst.txt  api.rst.txt  index.rst.txt  install.rst.txt  usage.rst.txt
docs/src/: about.rst  api.rst  conf.py  index.rst  install.rst  requirements.txt  usage.rst
examples/core/: demo_batch.py  demo_player.py  demo_viewer.py  simulation.py
examples/core/data/: heart.npy
examples/generic/: demo_batch.py  demo_player.py  demo_viewer.py  simulation.py
examples/sofa/: demo_batch.py  demo_pid.py  demo_player.py  demo_viewer.py  demo_viewer_manual.py  run_batch.py  run_player.py  run_sofa.py  run_viewer.py  simulation_caduceus.py  simulation_logo.py  simulation_logo_manual.py
examples/sofa/caduceus/: __init__.py  scene.py
examples/sofa/demo_caduceus/: run_with_python.py  simulation.py
examples/sofa/demo_logo/: run_with_python.py  run_with_python_batch.py  run_with_sofa.py  selections.py  simulation.py
examples/sofa/logo/: manual_init.py  scene.py  select_constraints.py
examples/sofa/tripod/: actuators.py  controller.py  elasticbody.py  (+2 more)
src/SimRender/: __init__.py
src/generic/: __init__.py  utils.py
src/sofa/: __init__.py
(+59 files in other folders)
