[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SimRender"
description = "SimRender is a tool for creating real time, interactive, non blocking 3D renderings of numerical simulations."
readme = "README.md"
authors = [{name = "Robin ENJALBERT"}]
requires-python = ">=3.10"
dependencies = ["numpy >= 1.24", "vedo >= 2024.5.1", "PySide6 >= 6.7.1"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "SimRender.__version__"}

[tool.setuptools.package-data]
SimRender = ["sofa/remote/*.png"]
